mux-compiler/tests/snapshots/parser_integration__legacy_ast_test_dynamic_interface_objects.snap
---
source: mux-compiler/tests/parser_integration.rs
---
[
    Interface {
        name: "Greeter",
        type_params: [],
        fields: [],
        methods: [
            FunctionNode {
                name: "greet",
                type_params: [],
                params: [
                    Param {
                        name: "suffix",
                        type_: TypeNode {
                            kind: Primitive(
                                Str,
                            ),
                            span: Span,
                        },
                        default_value: None,
                    },
                ],
                return_type: TypeNode {
                    kind: Primitive(
                        Str,
                    ),
                    span: Span,
                },
                body: [],
                span: Span,
                is_common: false,
                where_clause: None,
            },
        ],
        span: Span,
    },
    Class {
        name: "Alpha",
        type_params: [],
        traits: [
            TraitRef {
                name: "Greeter",
                type_args: [],
                span: Span,
            },
        ],
        fields: [],
        methods: [
            FunctionNode {
                name: "greet",
                type_params: [],
                params: [
                    Param {
                        name: "suffix",
                        type_: TypeNode {
                            kind: Primitive(
                                Str,
                            ),
                            span: Span,
                        },
                        default_value: None,
                    },
                ],
                return_type: TypeNode {
                    kind: Primitive(
                        Str,
                    ),
                    span: Span,
                },
                body: [
                    StatementNode {
                        kind: Return(
                            Some(
                                ExpressionNode {
                                    kind: Binary {
                                        left: ExpressionNode {
                                            kind: Literal(
                                                String(
                                                    "alpha-",
                                                ),
                                            ),
                                            span: Span,
                                        },
                                        op: Add,
                                        op_span: Span,
                                        right: ExpressionNode {
                                            kind: Identifier(
                                                "suffix",
                                            ),
                                            span: Span,
                                        },
                                    },
                                    span: Span,
                                },
                            ),
                        ),
                        span: Span,
                    },
                ],
                span: Span,
                is_common: false,
                where_clause: None,
            },
        ],
        where_clause: None,
        span: Span,
    },
    Class {
        name: "Beta",
        type_params: [],
        traits: [
            TraitRef {
                name: "Greeter",
                type_args: [],
                span: Span,
            },
        ],
        fields: [],
        methods: [
            FunctionNode {
                name: "greet",
                type_params: [],
                params: [
                    Param {
                        name: "suffix",
                        type_: TypeNode {
                            kind: Primitive(
                                Str,
                            ),
                            span: Span,
                        },
                        default_value: None,
                    },
                ],
                return_type: TypeNode {
                    kind: Primitive(
                        Str,
                    ),
                    span: Span,
                },
                body: [
                    StatementNode {
                        kind: Return(
                            Some(
                                ExpressionNode {
                                    kind: Binary {
                                        left: ExpressionNode {
                                            kind: Literal(
                                                String(
                                                    "beta-",
                                                ),
                                            ),
                                            span: Span,
                                        },
                                        op: Add,
                                        op_span: Span,
                                        right: ExpressionNode {
                                            kind: Identifier(
                                                "suffix",
                                            ),
                                            span: Span,
                                        },
                                    },
                                    span: Span,
                                },
                            ),
                        ),
                        span: Span,
                    },
                ],
                span: Span,
                is_common: false,
                where_clause: None,
            },
        ],
        where_clause: None,
        span: Span,
    },
    Function(
        FunctionNode {
            name: "invoke",
            type_params: [],
            params: [
                Param {
                    name: "value",
                    type_: TypeNode {
                        kind: TraitObject(
                            TypeNode {
                                kind: Named(
                                    "Greeter",
                                    [],
                                ),
                                span: Span,
                            },
                        ),
                        span: Span,
                    },
                    default_value: None,
                },
                Param {
                    name: "suffix",
                    type_: TypeNode {
                        kind: Primitive(
                            Str,
                        ),
                        span: Span,
                    },
                    default_value: None,
                },
            ],
            return_type: TypeNode {
                kind: Primitive(
                    Str,
                ),
                span: Span,
            },
            body: [
                StatementNode {
                    kind: Return(
                        Some(
                            ExpressionNode {
                                kind: Call {
                                    func: ExpressionNode {
                                        kind: FieldAccess {
                                            expr: ExpressionNode {
                                                kind: Identifier(
                                                    "value",
                                                ),
                                                span: Span,
                                            },
                                            field: "greet",
                                        },
                                        span: Span,
                                    },
                                    args: [
                                        ExpressionNode {
                                            kind: Identifier(
                                                "suffix",
                                            ),
                                            span: Span,
                                        },
                                    ],
                                },
                                span: Span,
                            },
                        ),
                    ),
                    span: Span,
                },
            ],
            span: Span,
            is_common: false,
            where_clause: None,
        },
    ),
    Function(
        FunctionNode {
            name: "main",
            type_params: [],
            params: [],
            return_type: TypeNode {
                kind: Primitive(
                    Void,
                ),
                span: Span,
            },
            body: [
                StatementNode {
                    kind: AutoDecl(
                        "alpha",
                        TypeNode {
                            kind: Auto,
                            span: Span,
                        },
                        ExpressionNode {
                            kind: Call {
                                func: ExpressionNode {
                                    kind: FieldAccess {
                                        expr: ExpressionNode {
                                            kind: Identifier(
                                                "Alpha",
                                            ),
                                            span: Span,
                                        },
                                        field: "new",
                                    },
                                    span: Span,
                                },
                                args: [],
                            },
                            span: Span,
                        },
                    ),
                    span: Span,
                },
                StatementNode {
                    kind: AutoDecl(
                        "beta",
                        TypeNode {
                            kind: Auto,
                            span: Span,
                        },
                        ExpressionNode {
                            kind: Call {
                                func: ExpressionNode {
                                    kind: FieldAccess {
                                        expr: ExpressionNode {
                                            kind: Identifier(
                                                "Beta",
                                            ),
                                            span: Span,
                                        },
                                        field: "new",
                                    },
                                    span: Span,
                                },
                                args: [],
                            },
                            span: Span,
                        },
                    ),
                    span: Span,
                },
                StatementNode {
                    kind: Expression(
                        ExpressionNode {
                            kind: Call {
                                func: ExpressionNode {
                                    kind: Identifier(
                                        "print",
                                    ),
                                    span: Span,
                                },
                                args: [
                                    ExpressionNode {
                                        kind: Call {
                                            func: ExpressionNode {
                                                kind: Identifier(
                                                    "invoke",
                                                ),
                                                span: Span,
                                            },
                                            args: [
                                                ExpressionNode {
                                                    kind: Identifier(
                                                        "alpha",
                                                    ),
                                                    span: Span,
                                                },
                                                ExpressionNode {
                                                    kind: Literal(
                                                        String(
                                                            "one",
                                                        ),
                                                    ),
                                                    span: Span,
                                                },
                                            ],
                                        },
                                        span: Span,
                                    },
                                ],
                            },
                            span: Span,
                        },
                    ),
                    span: Span,
                },
                StatementNode {
                    kind: Expression(
                        ExpressionNode {
                            kind: Call {
                                func: ExpressionNode {
                                    kind: Identifier(
                                        "print",
                                    ),
                                    span: Span,
                                },
                                args: [
                                    ExpressionNode {
                                        kind: Call {
                                            func: ExpressionNode {
                                                kind: Identifier(
                                                    "invoke",
                                                ),
                                                span: Span,
                                            },
                                            args: [
                                                ExpressionNode {
                                                    kind: Identifier(
                                                        "beta",
                                                    ),
                                                    span: Span,
                                                },
                                                ExpressionNode {
                                                    kind: Literal(
                                                        String(
                                                            "two",
                                                        ),
                                                    ),
                                                    span: Span,
                                                },
                                            ],
                                        },
                                        span: Span,
                                    },
                                ],
                            },
                            span: Span,
                        },
                    ),
                    span: Span,
                },
                StatementNode {
                    kind: Return(
                        None,
                    ),
                    span: Span,
                },
            ],
            span: Span,
            is_common: false,
            where_clause: None,
        },
    ),
]
