mux-compiler/tests/snapshots/parser_integration__legacy_ast_test_main_self_call_top_level.snap
---
source: mux-compiler/tests/parser_integration.rs
---
[
    Statement(
        StatementNode {
            kind: AutoDecl(
                "main_calls",
                TypeNode {
                    kind: Auto,
                    span: Span,
                },
                ExpressionNode {
                    kind: Literal(
                        Integer(
                            0,
                        ),
                    ),
                    span: Span,
                },
            ),
            span: Span,
        },
    ),
    Function(
        FunctionNode {
            name: "main",
            type_params: [],
            params: [],
            return_type: TypeNode {
                kind: Primitive(
                    Void,
                ),
                span: Span,
            },
            body: [
                StatementNode {
                    kind: Expression(
                        ExpressionNode {
                            kind: Binary {
                                left: ExpressionNode {
                                    kind: Identifier(
                                        "main_calls",
                                    ),
                                    span: Span,
                                },
                                op: Assign,
                                op_span: Span,
                                right: ExpressionNode {
                                    kind: Binary {
                                        left: ExpressionNode {
                                            kind: Identifier(
                                                "main_calls",
                                            ),
                                            span: Span,
                                        },
                                        op: Add,
                                        op_span: Span,
                                        right: ExpressionNode {
                                            kind: Literal(
                                                Integer(
                                                    1,
                                                ),
                                            ),
                                            span: Span,
                                        },
                                    },
                                    span: Span,
                                },
                            },
                            span: Span,
                        },
                    ),
                    span: Span,
                },
                StatementNode {
                    kind: Expression(
                        ExpressionNode {
                            kind: Call {
                                func: ExpressionNode {
                                    kind: Identifier(
                                        "print",
                                    ),
                                    span: Span,
                                },
                                args: [
                                    ExpressionNode {
                                        kind: Binary {
                                            left: ExpressionNode {
                                                kind: Literal(
                                                    String(
                                                        "main call #",
                                                    ),
                                                ),
                                                span: Span,
                                            },
                                            op: Add,
                                            op_span: Span,
                                            right: ExpressionNode {
                                                kind: Call {
                                                    func: ExpressionNode {
                                                        kind: FieldAccess {
                                                            expr: ExpressionNode {
                                                                kind: Identifier(
                                                                    "main_calls",
                                                                ),
                                                                span: Span,
                                                            },
                                                            field: "to_string",
                                                        },
                                                        span: Span,
                                                    },
                                                    args: [],
                                                },
                                                span: Span,
                                            },
                                        },
                                        span: Span,
                                    },
                                ],
                            },
                            span: Span,
                        },
                    ),
                    span: Span,
                },
                StatementNode {
                    kind: Return(
                        None,
                    ),
                    span: Span,
                },
            ],
            span: Span,
            is_common: false,
            where_clause: None,
        },
    ),
    Statement(
        StatementNode {
            kind: Expression(
                ExpressionNode {
                    kind: Call {
                        func: ExpressionNode {
                            kind: Identifier(
                                "main",
                            ),
                            span: Span,
                        },
                        args: [],
                    },
                    span: Span,
                },
            ),
            span: Span,
        },
    ),
]
